--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,21 +1,15 @@
 fastapi==0.104.1
-uvicorn[standard]==0.24.0
+uvicorn==0.24.0
 sqlalchemy==2.0.23
 pymysql==1.1.0
-cryptography==41.0.7
-python-jose[cryptography]==3.3.0
-passlib[bcrypt]==1.7.4
-python-multipart==0.0.6
 python-dotenv==1.0.0
-email-validator==2.1.0
-fastapi
-uvicorn
-sqlalchemy
-pymysql
-python-multipart
-python-jose[cryptography]
-passlib[bcrypt]
-ultralytics
-pillow
-cloudinary
-requests
+python-multipart==0.0.6
+python-jose==3.3.0
+passlib==1.7.4
+bcrypt==4.3.0
+ultralytics==8.3.204
+pillow==10.1.0
+cloudinary==1.44.1
+requests==2.32.3
+cryptography==46.0.3
+opencv-python-headless==4.10.0.84
