--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,16 +1,17 @@
-fastapi==0.104.1
-uvicorn==0.24.0
-sqlalchemy==2.0.23
+fastapi==0.110.0
+uvicorn==0.27.1
+pydantic==2.6.3
+pydantic-settings==2.2.1
+email-validator==2.1.1
+sqlalchemy==2.0.27
 pymysql==1.1.0
-python-dotenv==1.0.0
-python-multipart==0.0.6
+python-dotenv==1.0.1
+python-multipart==0.0.9
 python-jose==3.3.0
 passlib==1.7.4
-bcrypt==4.3.0
-ultralytics==8.3.204
-pillow==10.1.0
-cloudinary==1.44.1
-requests==2.32.3
-cryptography==46.0.3
-opencv-python-headless==4.10.0.84
-email-validator
+bcrypt==4.1.2
+ultralytics==8.1.24
+pillow==10.2.0
+cloudinary==1.39.0
+requests==2.31.0
+opencv-python-headless==4.9.0.80
