--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,16 +1,27 @@
+# --- Core Framework ---
 fastapi==0.110.0
 uvicorn==0.27.1
+python-dotenv==1.0.1
+python-multipart==0.0.9
+requests==2.31.0
+
+# --- Database ---
+sqlalchemy==2.0.27
+pymysql==1.1.0
+
+# --- Validation (Fix Error FieldInfo) ---
 pydantic==2.6.3
 pydantic-settings==2.2.1
 email-validator==2.1.1
-sqlalchemy==2.0.27
-pymysql==1.1.0
-python-multipart==0.0.9
+
+# --- Security (JWT & Hash) ---
 python-jose==3.3.0
 passlib==1.7.4
 bcrypt==4.1.2
+
+# --- AI & Image Processing (Fix Error NumPy) ---
+numpy==1.26.4
 ultralytics==8.1.24
 pillow==10.2.0
-cloudinary==1.39.0
-requests==2.31.0
 opencv-python-headless==4.9.0.80
+cloudinary==1.39.0
