--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.6.0",
     "react-router-dom": "^7.9.1",
+    "react-webcam": "^7.2.0",
     "recharts": "^3.2.0"
   },
   "devDependencies": {
